# nav2_dynamic_window_pure_pursuit_controller

./: CMakeLists.txt  README.md  algorithm.md  nav2_dynamic_window_pure_pursuit_controller.xml  package.xml
config/: example_dwpp_params.yaml  test_params.yaml
include/nav2_dynamic_window_pure_pursuit_controller/: dynamic_window_pure_pursuit_controller.hpp
launch/: dwpp_test.launch.py
model/: tb3_wo_odom.sdf
param/: dwpp_params.yaml
rviz/: dwpp_test.rviz
scripts/: follow_path_test_gui.py  ground_truth_odom_tf.py
src/: dynamic_window_pure_pursuit_controller.cpp
world/: test.world
