<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_dynamic_window_pure_pursuit_controller</name>
  <version>0.0.0</version>
  <description>Nav2 plugin for Dynamic Window Pure Pursuit</description>
  <maintainer email="fumiya-onishi@keio.jp">Fumiya Ohnishi (Decwest)</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
